creusot/tests/should_succeed/drop_pair.coma

module DropPair_DropPair
  use prelude.UInt32
  use prelude.Int
  use prelude.Borrow
  use prelude.Intrinsic
  predicate resolve1 (self : borrowed uint32) =
    [#"../../../../creusot-contracts/src/resolve.rs" 25 20 25 34]  ^ self =  * self
  let rec resolve1 (self:borrowed uint32) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = resolve1 self} (! return' {result}) ]
    
  predicate resolve0 (self : (borrowed uint32, borrowed uint32)) =
    [#"../../../../creusot-contracts/src/resolve.rs" 16 8 16 60] resolve1 (let (a, _) = self in a) /\ resolve1 (let (_, a) = self in a)
  let rec resolve0 (self:(borrowed uint32, borrowed uint32)) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = resolve0 self} (! return' {result}) ]
    
  let rec drop_pair (_x:(borrowed uint32, borrowed uint32)) (return'  (ret:()))= (! bb0 
    [ bb0 = -{resolve0 _x}- [ &_0 <- [#"../drop_pair.rs" 7 43 7 45] () ] return' {_0}  ]
    ) 
    [ return' (result:())-> {[#"../drop_pair.rs" 6 10 6 24]  ^ (let (_, a) = _x in a) =  * (let (_, a) = _x in a)}
      {[#"../drop_pair.rs" 5 10 5 24]  ^ (let (a, _) = _x in a) =  * (let (a, _) = _x in a)}
      {[#"../drop_pair.rs" 4 10 4 22] resolve0 _x}
      (! return' {_0}) ]
    [ & _0 : () = any_l () : () | & _x : (borrowed uint32, borrowed uint32) = _x ] 
end
module DropPair_DropPair2
  use prelude.UInt32
  use prelude.Int
  use prelude.Borrow
  use prelude.Intrinsic
  predicate resolve1 (self : borrowed uint32) =
    [#"../../../../creusot-contracts/src/resolve.rs" 25 20 25 34]  ^ self =  * self
  let rec resolve1 (self:borrowed uint32) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = resolve1 self} (! return' {result}) ]
    
  predicate resolve0 (self : (borrowed uint32, borrowed uint32)) =
    [#"../../../../creusot-contracts/src/resolve.rs" 16 8 16 60] resolve1 (let (a, _) = self in a) /\ resolve1 (let (_, a) = self in a)
  let rec resolve0 (self:(borrowed uint32, borrowed uint32)) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = resolve0 self} (! return' {result}) ]
    
  let rec drop_pair2 (x:(borrowed uint32, borrowed uint32)) (return'  (ret:()))= (! bb0 
    [ bb0 = -{resolve0 x}- [ &_0 <- [#"../drop_pair.rs" 9 43 11 1] () ] return' {_0}  ]
    ) [ return' (result:())-> (! return' {_0}) ] 
    [ & _0 : () = any_l () : () | & x : (borrowed uint32, borrowed uint32) = x ]
    
end
module DropPair_Drop
  use prelude.Intrinsic
  use prelude.UInt32
  use prelude.Int
  use prelude.Borrow
  predicate resolve0 (self : borrowed uint32) =
    [#"../../../../creusot-contracts/src/resolve.rs" 25 20 25 34]  ^ self =  * self
  let rec resolve0 (self:borrowed uint32) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = resolve0 self} (! return' {result}) ]
    
  let rec drop (_x:borrowed uint32) (y:borrowed uint32) (return'  (ret:()))= (! bb0 
    [ bb0 = -{resolve0 _x}- Borrow.borrow_final <uint32> { * y} {Borrow.get_id y} (fun (_ret':borrowed uint32) -> 
        [ &_3 <- _ret' ]
        [ &y <- { y with current = ( ^ _3) ; } ] [ &_x <- _3 ] any 
        [ any_ (_any:borrowed uint32)-> [ &_3 <- _any ] -{resolve0 _x}- 
          [ &_0 <- [#"../drop_pair.rs" 15 53 17 1] () ]
          -{resolve0 y}- return' {_0} ]
        )  ]
    ) [ return' (result:())-> (! return' {_0}) ] 
    [ & _0 : () = any_l () : ()
    | & _x : borrowed uint32 = _x
    | & y : borrowed uint32 = y
    | & _3 : borrowed uint32 = any_l () : borrowed uint32 ]
    
end
